# ONE

./: .clang-format  .clang-format.16  .clang-format.8  .cmake-format.yaml  .ctags  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .union  .yapfignore  1  CONTRIBUTORS  COPYRIGHT  DRAFT.md  LICENSE  Makefile.compiler_lcov  Makefile.template  NOTE.md  Note.md  README.md  _2github_2workspace_2compiler_2luci_2pass_2src_2_remove_unnecessary_transpose_net_pass_8cpp-example.html  _2github_2workspace_2compiler_2luci_2pass_2src_2_substitute_expand_dims_to_reshape_pass_8cpp-example.html  __deprecated_2ann-ref_2src_2_assert_8h.html  __deprecated_2ann-ref_2src_2_assert_8h.js  __deprecated_2ann-ref_2src_2_assert_8h_source.html  __deprecated_2ann-ref_2src_2_validation_8h.html  __deprecated_2ann-ref_2src_2_validation_8h.js  __deprecated_2ann-ref_2src_2_validation_8h_source.html  __deprecated_2ann-ref_2src_2assert_8h.html  __deprecated_2ann-ref_2src_2assert_8h.js  __deprecated_2ann-ref_2src_2assert_8h_source.html  __deprecated_2ann-ref_2src_2ops_2_add_8h.html  __deprecated_2ann-ref_2src_2ops_2_add_8h.js  __deprecated_2ann-ref_2src_2ops_2_add_8h_source.html  __deprecated_2ann-ref_2src_2ops_2_avg_pool2_d_8cpp.html  __deprecated_2ann-ref_2src_2ops_2_avg_pool2_d_8cpp.js  (+58259 more)
circle-mlir/: CMakeLists.txt  Makefile.aa  Makefile.sample  README.md
circle-mlir/circle-mlir/: CMakeLists.txt
circle-mlir/models/: gen_models.py  onnx_utils.py
codegen/luci-codegen/: CMakeLists.txt
codegen/src/: CMakeLists.txt  Codegen.cpp  Driver.cpp  KernelBuilder.h  Scheduler.h  Utilities.h
compiler/: CMakeLists.txt
compiler/_deprecated/: README.md
compiler/adtidas/: CMakeLists.txt  README.md
compiler/angkor/: CMakeLists.txt  README.md
compiler/ann-api/: CMakeLists.txt  README.md
compiler/ann-ref/: CMakeLists.txt  requires.cmake
compiler/arser/: CMakeLists.txt  README.md
compiler/bcq-tools/: CMakeLists.txt  README.md  generate_bcq_metadata  generate_bcq_metadata.py  generate_bcq_output_arrays  generate_bcq_output_arrays.py  generate_bcq_output_list  preserve_bcq_info
compiler/bino/: CMakeLists.txt  README.md
compiler/caffegen/: CMakeLists.txt  README.md
compiler/circle-eval-diff/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-execution-plan/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-input-names/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-input-names-test/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-inspect/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-interpreter/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-interpreter-cffi-test/: CMakeLists.txt  README.md  infer.py  requires.cmake  test.lst
compiler/circle-interpreter-test/: CMakeLists.txt  README.md  eval_driver.sh  eval_result_verifier.py  requires.cmake  run_command.sh  test.lst
compiler/circle-memory-plan/: CMakeLists.txt
compiler/circle-mpqsolver/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-operator/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-operator-test/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-opselector/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-opselector-test/: CMakeLists.txt  README.md  arg_validity_check.sh  arg_validity_test.py  arg_validity_test.sh  cli_test.py  compare_circles.sh  luci_eval_verifier.py  opselector_test.py  opselector_test.sh  requires.cmake  test.lst  value_test.sh
compiler/circle-part-driver/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-part-eval/: CMakeLists.txt  README.md  part_eval_all.sh  test.lst
compiler/circle-part-value-py-test/: CMakeLists.txt  README.md  conftest.py  requires.cmake  test_circle_part_value.py
compiler/circle-part-value-test/: CMakeLists.txt  README.md  part_eval_all.sh  part_eval_one.py  test.lst
compiler/circle-partitioner/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-partitioner-test/: CMakeLists.txt  README.md  requires.cmake  test.lst
compiler/circle-quantizer/: CMakeLists.txt  requires.cmake
compiler/circle-quantizer-dredd-recipe-test/: CMakeLists.txt  README.md  requires.cmake  test.lst  testall.sh
compiler/circle-quantizer-lib/: CMakeLists.txt  README.md
compiler/circle-resizer/: CMakeLists.txt  README  README.md  requires.cmake
compiler/circle-resizer-dredd-recipe-test/: CMakeLists.txt  README.md  requires.cmake  test.lst  testall.sh
compiler/circle-tensordump/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-verify/: CMakeLists.txt  README.md  requires.cmake
compiler/circle-verifyname/: CMakeLists.txt  README.md
compiler/circle-weight-divider/: CMakeLists.txt  requires.cmake
compiler/circle2circle/: CMakeLists.txt  README.md  requires.cmake
compiler/circle2circle-dredd-pbtxt-test/: CMakeLists.txt  README.md  requires.cmake  test.lst
compiler/circle2circle-dredd-recipe-test/: CMakeLists.txt  README.md  requires.cmake  test.lst  testall.sh
compiler/circlechef/: CMakeLists.txt  README.md  requires.cmake
compiler/circledump/: CMakeLists.txt  README.md  requires.cmake
compiler/cli/: CMakeLists.txt  README.md
compiler/coco/: README.md
compiler/common-artifacts/: CMakeLists.txt  README.md  exclude.lst  options.lst  requires.cmake
compiler/crew/: CMakeLists.txt  README.md  requires.cmake
compiler/cwrap/: CMakeLists.txt  README.md
compiler/dalgona/: CMakeLists.txt  README.md  requires.cmake
compiler/dalgona-test/: CMakeLists.txt  RandomDataGenerator.py  SingleOperatorTest.py  TestSingleOp.sh  TestUtil.py  requires.cmake  test.lst
compiler/dio-hdf5/: CMakeLists.txt  README.md
compiler/dredd-rule-lib/: CMakeLists.txt  README.md  rule-lib.sh
compiler/embedded-import-value-test/: CMakeLists.txt  README.md  evalverify.sh  test.lst
compiler/enco/: CMakeLists.txt
onert-micro/: CMakeLists.txt  Dockerfile  README.md  git_version.h.in  main.cpp  remove_stablehlo_from_cir0.8.patch
runtime/: .gitignore  CMakeLists.txt  coding-rules.md  pyproject.toml
(+19809 files in other folders)
